--- a/IngredientAnalyzer.AzureFunction/IngredientAnalyzer.AzureFunction.csproj
+++ b/IngredientAnalyzer.AzureFunction/IngredientAnalyzer.AzureFunction.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.2.0" />
-    <PackageReference Include="Telegram.Bot" Version="21.9.0" />
+    <PackageReference Include="Telegram.Bot" Version="20.0.0-alpha.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
